# octahack-rs

./: .gitmodules  Cargo.toml  README.md  parts-list.txt
examples/: fm_synthesis.rs  functions.rs
src/: component.rs  context.rs  display.rs  lib.rs  octahack_components.rs  output.rs  params.rs  rack.rs
src/components/: anycomponent.rs  mod.rs
src/octahack_components/: amplifier.rs  file_player.rs  midi_expander.rs  mod.rs  sine_synth.rs  synth.rs
