[package]
name = "octahack"
version = "0.1.0"
authors = ["Jef <jackefransham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.5"
az = "0.3"
cpal = "0.8"
crossbeam-channel = "0.3"
derive_more = { git = "https://github.com/Vurich/derive_more" }
fixed = { version = "0.4", features = ["az"] }
fxhash = "0.2"
generic-array = { git = "https://github.com/Vurich/generic-array", features = ["arrayvec"] }
hlist = "0.1"
itertools = "0.8"
nom-midi = "0.5"
rodio = "0.9"
typenum = "1.11"
