[package]
name = "octahack"
version = "0.1.0"
authors = ["Jef <jackefransham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
staticvec = "0.7"
array_iterator = "0.2"
az = "0.3"
cpal = "0.8"
crossbeam-channel = "0.3"
derive_more = "0.99"
fast-floats = "0.1"
fixed = { version = "0.4", features = ["az"] }
hlist = "0.1"
itertools = "0.8"
nom-midi = "0.5"
rand = { version = "0.7", features = ["small_rng"] }
rodio = "0.10"
typenum = "1.11"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
